probe_iter.txt
probe_time_iter.zig:3:17: error: unable to resolve comptime value
    inline for (std.meta.declarations(std.time)) |decl| {
                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
probe_time_iter.zig:3:17: note: inline loop condition must be comptime-known
referenced by:
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\start.zig:679:59
    WinStartup: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2223+4f16e80ce\lib\std\start.zig:479:53
    2 reference(s) hidden; use '-freference-trace=4' to see all references
